# nss_compat_ossl

./: 0001-Enable-ssl2_non-fatal.patch  0001-Resolves-1233122-do-not-enable-SSLv2-any-more.patch  Makefile  README.md  nss_compat_ossl.spec
src/: AUTHORS  ChangeLog  Makefile.in  configure  configure.in
src/src/: Makefile.am  Makefile.in  log.c  nss_compat_ossl.h  rand.c  ssl.c
